--- a/client.html
+++ b/client.html
@@ -1,5 +1,45 @@
 <html>
+<title>WebSocket Client</title>
 <body>
-    <h1>Hi!</h1>
+<input id="input" type="text"/>
+<button onclick="send()">Send</button>
+<button onclick="sendBlob()">Send Blob</button>
+
+<button onclick="closeSocket()">Close</button>
+
+<pre id="output"></pre>
+<script>
+    var input = document.getElementById("input");
+    var output = document.getElementById("output");
+    var socket = new WebSocket("ws://localhost:1234/ws");
+
+    socket.onopen = function () {
+        output.innerHTML += "Status: Connected\n";
+    };
+
+    socket.onmessage = function (e) {
+        output.innerHTML += "Server: " + e.data + "\n";
+    };
+
+    socket.onclose = function () {
+        output.innerHTML += "Status: Closed\n";
+    }
+
+    function send() {
+        socket.send(input.value);
+        input.value = "";
+    }
+
+    function sendBlob() {
+        var debug = {hello: input.value};
+        var blob = new Blob([JSON.stringify(debug, null, 2)], {type: 'application/json'});
+        socket.send(blob);
+        input.value = "";
+    }
+
+    function closeSocket() {
+        socket.close(1000, "Bye bye!");
+    }
+</script>
 </body>
 </html>
